[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "rust_backend"

[dependencies]
actix-web = "4.5.1"
[dependencies.tokio]
version="1.37.0"
features=[
    "macros",
    "rt-multi-thread"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
